--- a/style.css
+++ b/style.css
@@ -31,6 +31,18 @@ header {
   z-index: 9;
 }
 
+.left-bar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.left-bar img{
+  width: 30px;
+  height: 30px;
+  margin-right: 0px;
+}
+
 .logo {
   font-size: 24px;
   font-weight: bold;
@@ -59,7 +71,7 @@ nav ul li a:hover {
   color: rgb(87, 87, 87);
 }
 
-.left-bar {
+.right-bar {
   display: flex;
   align-items: center;
   width: 225px;
@@ -331,7 +343,7 @@ Sportswear-card:hover {
 }
 
 .image {
-  background: url(background.png);
+  background: url(images/background.png);
   width: 230px;
   height: 260px;
   border-radius: 10px;
@@ -441,18 +453,21 @@ Sportswear-card:hover {
 
 .about-section h1 {
   font-size: 40px;
+  color: #f3f3f3;
 }
 
 .about-section h1,
 .about-section h2 {
   text-align: center;
   margin-bottom: 20px;
+  color: #f3f3f3;
 }
 
 .about-section p {
   margin-bottom: 15px;
   font-size: 18px;
   text-align: center;
+  color: #f3f3f3;
 }
 
 .team {
@@ -461,6 +476,7 @@ Sportswear-card:hover {
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 30px;
+    color: #f3f3f3;
 }
 
 .team-member {
@@ -490,4 +506,3 @@ footer {
   color: #f3f3f3;
   font: 1em sans-serif;
 }
-
